crates/rome_js_formatter/tests/specs/prettier/js/comments/html-like/comment.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: comment.js
---
# Input
```js
<!--
alert(1)
-->
```

# Output
```js
<!--
alert(1)
-->

```

# Errors
```
error[SyntaxError]: Expected an expression for the left hand side of the `<` operator.
  ┌─ comment.js:1:1
  │
1 │ <!--
  │ ^ This operator requires a left hand side value

error[SyntaxError]: Invalid assignment to `alert(1)`
  ┌─ comment.js:2:1
  │
2 │ alert(1)
  │ ^^^^^^^^ This expression cannot be assigned to

error[SyntaxError]: expected an identifier, or a member expression but instead found '>'
  ┌─ comment.js:3:3
  │
3 │ -->
  │   ^ Expected an identifier, or a member expression here

error[SyntaxError]: expected an expression but instead found ''
  ┌─ comment.js:3:4
  │
3 │ -->
  │    ^ Expected an expression here


```


